--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Commitment</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
-<header>
-	<h1>commitment</h1>
-</header>
+	<header>
+		<!--<img id="title" src="img/pokemon.png" alt="Pokemon" width="500">-->
+	</header>
+		<center>
+			<i class="material-icons" style="font-size:100px;color:blue;">anchor</i>
+		</center>
 </body>
 </html>
