Added ship with animation, header text (with font) and edited anchor animation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+     <!-- Anchor's away font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<header>
-		<!--<img id="title" src="img/pokemon.png" alt="Pokemon" width="500">-->
+		Anchor's Away!
 	</header>
 		<center>
-			<i class="material-icons" style="font-size:100px;color:blue;">anchor</i>
+			<i class="material-icons anchor" style="font-size:100px;color:blue;">anchor</i>
 		</center>
+		<i class="material-icons sailboat" style="font-size:300px;color:blue;">sailing</i>
 </body>
 </html>
