Added waves, used code from https://codepen.io/tedmcdo/pen/PqxKXg

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
 
 </head>
+<div class="ocean">
+  <div class="wave"></div>
+  <div class="wave"></div>
+</div>
 <body>
 	<header>
 		Anchor's Away!
 	</header>
-		<center>
-			<i class="material-icons anchor" style="font-size:100px;color:blue;">anchor</i>
-		</center>
-		<i class="material-icons sailboat" style="font-size:300px;color:blue;">sailing</i>
+		<!-- <i class="material-icons sailboat" style="font-size:300px;color:skyblue;">sailing</i> -->
 </body>
 </html>
