Added sun to ocean scene

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
   <div class="wave"></div>
 </div>
 <body>
-	<header>
-		Anchor's Away!
-	</header>
-		<!-- <i class="material-icons sailboat" style="font-size:300px;color:skyblue;">sailing</i> -->
+	<div id="circle"></div>
 </body>
 </html>
