Glitchy sky: added two other clouds with different odd animations

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 <body>
 	<div class="circle"></div>
 	<i class="material-icons sky" style="font-size:100px">cloud</i>
+	<i class="material-icons sky2" style="font-size:100px;color:white" >cloud</i>
+	<i class="material-icons sky3" style="font-size:100px;color:white" >cloud</i>
 </body>
 </html>
