Arabian Nights: added text and background

--- a/index.html
+++ b/index.html
@@ -6,20 +6,14 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-     <!-- Anchor's away font -->
+     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
 
 </head>
-<div class="ocean">
-  <div class="wave"></div>
-  <div class="wave"></div>
-</div>
 <body>
 	<div class="circle"></div>
-	<i class="material-icons sky" style="font-size:100px">cloud</i>
-	<i class="material-icons sky2" style="font-size:100px;color:white" >cloud</i>
-	<i class="material-icons sky3" style="font-size:100px;color:white" >cloud</i>
+	<center>Arabian Nights</center>
 </body>
 </html>
