--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<div class="circle"></div>
-	<center>Arabian Nights</center>
+	<center>Like Arabian Days</center>
+	<center id="text2">Arabian Nights</center>
 </body>
 </html>
