--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 	<div class="circle"></div>
-	<center>Like Arabian Days</center>
-	<center id="text2">Arabian Nights</center>
+	<i class="material-icons snow">ac_unit</i>
+	<i class="material-icons" id="snow2">ac_unit</i>
+	<!--<center>Like Arabian Days</center>
+	<center id="text2">Arabian Nights</center>-->
 </body>
 </html>
