Magical animated orb

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 </head>
 <body>
-	<!--<center>Like Arabian Days</center>
-	<center id="text2">Arabian Nights</center>-->
+	<center>
+		<div class="shape"></div>
+	</center>
 </body>
 </html>
