Flashing text with questioning where to go next

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
      <!-- Font -->
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
    
 </head>
 <body>
+	<center>
+		<p>I have officially run out of cool ideas on what to do now...</p>
+		<div id="text2">....time to rely purely on where the patterns take me</div>
+	</center>
 
 </body>
 </html>
