--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 	<center>
-		<p>I have officially run out of cool ideas on what to do now...</p>
-		<div id="text2">....time to rely purely on where the patterns take me</div>
+		<p>Flowers</p>
+		<i class="material-icons">shower</i>
+		<p>Blossom</p>
 	</center>
 
 </body>
