--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<center>
 		<p>Flowers</p>
-		<i class="material-icons">shower</i>
+		<i class="material-icons iconAdded" style="font-size:50px;color:blue";>shower</i>
 		<p>Blossom</p>
 	</center>
 
