--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 	<center>
-		<p>Flowers</p>
+		<p>Patterns</p>
 		<i class="material-icons iconAdded" style="font-size:50px;color:blue";>shower</i>
-		<p>Blossom</p>
+		<p>Change</p>
 	</center>
 
 </body>
