--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 <body>
 	<center>
-		<p>Patterns</p>
+		<p>Patterns Change</p>
 		<i class="material-icons iconAdded" style="font-size:50px;color:blue";>shower</i>
-		<p>Change</p>
 	</center>
 
 </body>
