Opening the door to insisde

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 	<center>
-		<p>Patterns Change</p>
-		<i class="material-icons iconAdded" style="font-size:50px;color:blue";>shower</i>
+		<p>Time to head Indoors</p>
+		<i class="material-icons iconAdded" style="font-size:500px;color:brown";>door_front</i>
+
 	</center>
 
 </body>
