Sit and Relax for a moment

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
 	<center>
-		<p>Time to head Indoors</p>
-		<i class="material-icons iconAdded" style="font-size:500px;color:brown";>door_front</i>
+		<p>Kick back and relax!</p>
+	</center>
+
+	<center>
+		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>personal_video</i>
+		<i class="material-icons iconAdded" style="font-size:500px;color:white;";>chair</i>
 
 	</center>
 
