Opening the fridge

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 	<center>
 		<p>Now to get something to eat</p>
+		<p>A cold wind of air hits your face</p>
 	</center>
 
 	<center>
-		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>personal_video</i>
-		<i class="material-icons iconAdded" style="font-size:500px;color:white;";>chair</i>
+		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>kitchen</i>
 
 	</center>
 
