--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 </head>
 <body>
 	<center>
-		<p>Now to get something to eat</p>
-		<p>A cold wind of air hits your face</p>
+		<p>Strawberry Cake is the best!</p>
 	</center>
 
 	<center>
-		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>kitchen</i>
+		<i class="material-icons iconAdded" style="font-size:500px;color:pink;";>cake</i>
 
 	</center>
 
