Started color gradient

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 	<center>
-		<p>Now time for Sleep zzzzz</p>
+		<p>Good Morning</p>
 	</center>
 
 	<center>
-		<i class="material-icons iconAdded" style="font-size:500px;color:blue;";>bed</i>
+		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>bed</i>
 
 	</center>
 
