--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 	<center>
-		<p>Good Morning</p>
+		<p>Good morning for a rocket launch?</p>
 	</center>
 
 	<center>
-		<i class="material-icons iconAdded" style="font-size:500px;color:black;";>bed</i>
+		<i class="material-icons iconAdded" style="font-size:150px;color:black;";>rocket</i>
 
 	</center>
 
