Rocket made it to space

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 	<center>
-		<p>Good morning for a rocket launch?</p>
+		<p>Congrats! You're in space!</p>
 	</center>
 
 	<center>
-		<i class="material-icons iconAdded" style="font-size:150px;color:black;";>rocket</i>
+		<i class="material-icons iconAdded" style="font-size:150px;color:black;">rocket_launch</i>
 
 	</center>
 
