House on the moon

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 </head>
 <body>
 	<center>
-		<p>Congrats! You're in space!</p>
-	</center>
+		<i class="material-icons iconAdded" style="font-size:150px;color:black;">house</i>
+		<div class="circle"></div>
 
+	</center>
 	<center>
-		<i class="material-icons iconAdded" style="font-size:150px;color:black;">rocket_launch</i>
 	</center>
-
-	<div class="circle"></div>
 
 </body>
 </html>
