Added mountain to earth

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 <body>
 	<center>
-		<i class="material-icons iconAdded" style="font-size:150px;color:black;">house</i>
-		<div class="circle"></div>
-
+		<p>Meanwhile back on Earth...</p>
 	</center>
 	<center>
+		<i class="material-icons iconAdded" style="font-size:1000px;color:rosybrown;">landscape</i>
 	</center>
 
 </body>
