Misalighned Mountain and Hiker

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<center>
 		<p>Meanwhile back on Earth...</p>
 	</center>
-	<center>
-		<i class="material-icons iconAdded" style="font-size:1000px;color:rosybrown;">landscape</i>
-	</center>
+	<i class="material-icons" style="font-size:200px;color:black;">hiking</i>
+		<i class="material-icons iconAdded" style="font-size:500px;color:rosybrown;">landscape</i>
 
 </body>
 </html>
