Change of subject and animated circle to oval

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 </head>
 <body>
 	<center>
-		<p>Meanwhile back on Earth...</p>
+		<p>I never just randomly change the subject... </p>
+		<p>Time to mess with some shapes</p>
 	</center>
 	<i class="material-icons" style="font-size:200px;color:black;">hiking</i>
-		<i class="material-icons iconAdded" style="font-size:500px;color:rosybrown;">landscape</i>
+	<center>
+		<div class="circle"></div>
+	</center>
 
 </body>
 </html>
