--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 	<center>
-		<p>I never just randomly change the subject... </p>
-		<p>Time to mess with some shapes</p>
+		<!--<p>I never just randomly change the subject... </p>
+		<p>Time to mess with some shapes</p>-->
 	</center>
-	<i class="material-icons" style="font-size:200px;color:black;">hiking</i>
+	<!--<i class="material-icons" style="font-size:200px;color:black;">hiking</i> -->
 	<center>
 		<div class="circle"></div>
 	</center>
