--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</center>
 	<!--<i class="material-icons" style="font-size:200px;color:black;">hiking</i> -->
 	<center>
-		<!--<div class="shape"></div>-->
+		<div class="shape"></div>
 	</center>
 
 </body>
