--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 	<center>
-		<!--<p>I never just randomly change the subject... </p>
-		<p>Time to mess with some shapes</p>-->
+		<p>Congradulations, You've unlocked the colors of the Rainbow! </p>
 	</center>
 	<!--<i class="material-icons" style="font-size:200px;color:black;">hiking</i> -->
 	<center>
